Commit de correções

--- a/To-Do List/assets/css/style.css
+++ b/To-Do List/assets/css/style.css
@@ -55,6 +55,7 @@ input[type="text"] {
   border: 1px solid black;
 }
 
+/* conforme estiver checado, muda a decoração */
 :checked + label {
   text-decoration: line-through;
   color: grey;
